# turing-machine

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog.md  LICENSE  README.md  Turing_machine-0.1.2.0-x86_64.AppImage  default.nix  package.yaml  shell.nix  tmBB2.yaml  tmBB5.yaml  turing-machine.cabal
app/: Main.hs
dist-docs/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: package.cache  turing-machine-0.1.0.0-inplace.conf  turing-machine-0.1.2.0-inplace.conf
examples/: tmBB2.yaml.result  tmBB3.yaml  tmBB3.yaml.result  tmBB4.yaml  tmBB4.yaml.result  tmBB5.yaml.result
exe/: Main.hs
src/: Lib.hs  Main.hs
src/Data/: TuringMachine.hs
turing-machine.AppDir/: turing-machine.desktop
turing-machine.AppDir/usr/share/applications/: turing-machine.desktop
