cabal-version: 1.12

name:           turing-machine
version:        0.1.2.0
description:    Please see the README on GitHub at <https://gitlab.com/CrazyMind102/turing-machine#readme>
homepage:       https://gitlab.com/CrazyMind102/turing-machine#readme
bug-reports:    https://gitlab.com/CrazyMind102/turing-machine/issues
author:         CrazyMind102
maintainer:     tim.gravert@gmx-topmail.de
copyright:      Tim Gravert
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://gitlab.com/CrazyMind102/turing-machine

library
  exposed-modules:
      Data.TuringMachine
  other-modules:
      Paths_turing_machine
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , text
    , yaml
  default-language: Haskell2010

executable turing-machine
  main-is: Main.hs
  other-modules:
      Paths_turing_machine
  hs-source-dirs:
      exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , filepath
    , optparse-applicative
    , semigroups
    , text
    , turing-machine
    , yaml
  default-language: Haskell2010

test-suite turing-machine-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_turing_machine
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , containers
    , text
    , turing-machine
  default-language: Haskell2010
