cabal-version: 1.12

name:           turing-machine
version:        0.1.2.2
description:    Please see the README on GitHub at <https://gitlab.com/CrazyMind102/turing-machine#readme>
homepage:       https://gitlab.com/CrazyMind102/turing-machine#readme
bug-reports:    https://gitlab.com/CrazyMind102/turing-machine/issues
author:         CrazyMind102
maintainer:     tim.gravert@gmx-topmail.de
copyright:      Tim Gravert
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://gitlab.com/CrazyMind102/turing-machine

library
  exposed-modules:
      Data.TuringMachine
  other-modules:
      Paths_turing_machine
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , text
    , yaml
  default-language: Haskell2010

executable turing-machine
  main-is: Main.hs
  other-modules:
      Paths_turing_machine
    , Data.TuringMachine
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
--    , bricks
    , containers
    , filepath
--    , microlens
--    , microlens-th
    , optparse-applicative
    , semigroups
    , text
    , turing-machine
--    , vector
--    , vty
    , yaml
  default-language: Haskell2010
